# CamProject

./: .gitignore  CMakeLists.txt  README.md  build.sh  output.raw  run.sh
docs/: capture_pipeline.md
include/: v4l2_utils.h
src/: unicam_capture.cpp  v4l2_utils.cpp
